<resources>
    <string name="app_name">GoFish</string>

    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="title_activity_map_view">MapViewActivity</string>

    <string name="city">City</string>
    <string name="name">First name</string>
    <string name="last">Last name</string>
    <string name="address">Street address</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter">Enter</string>
    <string name="phone">Phone number</string>
    <string name="entry">Login</string>
    <string name="delete">Delete</string>
    <string name="search">Search user</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_EC">Delete Contact</string>
    <string name="create_user">Create user</string>
    <string name="welcome">Welcome to GoFish!</string>
    <string name="deleteEC">Delete Emergency Contact</string>
    <string name="addEC">Add Emergency Contact</string>
    <string-array name="user_roles">
        <item>Admin</item>
        <item>Veteran</item>
        <item>Volunteer</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register_user_2">Sign up</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_activity_assign_item_activitu">AssignItemActivity</string>
    <string name="title_activity_create_item">CreateItemActivity</string>
    <string name="locations">People Locator</string>
    <string name="view_nearby_people">View Nearby People</string>
    <string name="title_activity_location_view">LocationView</string>

</resources>
