<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddEC">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/addECFirst"
        android:layout_alignTop="@+id/textView"
        android:layout_alignRight="@+id/addECLast"
        android:layout_alignEnd="@+id/addECLast"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress|textPersonName"
        android:ems="10"
        android:id="@+id/addECLast"
        android:layout_below="@+id/addECFirst"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/addECAddress"
        android:layout_below="@+id/addECLast"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/addECCity"
        android:layout_below="@+id/addECAddress"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addECState"
        android:layout_below="@+id/addECCity"
        android:layout_alignRight="@+id/addECCity"
        android:layout_alignEnd="@+id/addECCity"
        android:inputType="text"
        android:layout_toEndOf="@+id/textView4"
        android:layout_alignLeft="@+id/addECZip"
        android:layout_alignStart="@+id/addECZip"
        android:layout_toRightOf="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addECZip"
        android:layout_below="@+id/addECState"
        android:layout_alignRight="@+id/addECCity"
        android:layout_alignEnd="@+id/addECCity"
        android:inputType="phone"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:id="@+id/textView2"
        android:layout_below="@+id/addECFirst"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/addECAddress"
        android:layout_above="@+id/addECCity"
        android:layout_toLeftOf="@+id/addECAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/addECCity"
        android:layout_toLeftOf="@+id/addECAddress"
        android:layout_toStartOf="@+id/addECAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:id="@+id/textView5"
        android:layout_below="@+id/addECCity"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip"
        android:id="@+id/textView6"
        android:layout_below="@+id/addECState"
        android:layout_toLeftOf="@+id/addECState"
        android:layout_toStartOf="@+id/addECState" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addECPhone"
        android:inputType="phone"
        android:layout_alignTop="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_alignRight="@+id/addECZip"
        android:layout_alignEnd="@+id/addECZip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/textView7"
        android:layout_below="@+id/addECZip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Contact"
        android:id="@+id/addECButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/addECEmail"
        android:layout_below="@+id/addECPhone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/addECPhone"
        android:layout_alignStart="@+id/addECPhone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/addECEmail"
        android:layout_toLeftOf="@+id/addECEmail"
        android:layout_toStartOf="@+id/addECEmail" />

</RelativeLayout>
