<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/loginEmail"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/loginEmail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textView9"
        android:layout_alignTop="@+id/loginEmail"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView10"
        android:layout_alignTop="@+id/loginPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry"
        android:id="@+id/loginButt"
        android:layout_below="@+id/registerButt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/registerButt"
        android:layout_marginTop="98dp"
        android:layout_below="@+id/loginPassword"
        android:layout_alignLeft="@+id/loginButt"
        android:layout_alignStart="@+id/loginButt" />
</RelativeLayout>
